--- a/style.css
+++ b/style.css
@@ -1,11 +1,77 @@
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
 :root{
+    --primary-color: hsla(170, 100%, 26%, 1.0);
+    --headline: hsl(210,11%,15%);
+    --paragraph: hsl(210, 9%,31%);
     font-size: 62.5%;
     /* o tamanho de fonte padrão é 16px que é igual a 1 rem, aqui fiz a alteração na root */
 }
 body{
     font-family: 'DM Sans', sans-serif;
     font-size: 1.6rem;
+    color: var(--primary-color);
+    text-align: center;
+}
+header{
+    width: 37.5rem;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 4.1rem; 
+    
+
+    padding-right: 2rem;
+    padding-left: 2rem;
+
 }
 h4 {
-    font-size: 14px;
+    font-size: 1.4em;
+    color: var(--primary-color);
+    margin-bottom: 1.6rem;
+
+}
+h1{
+    font-size: 3.4rem;
+    color: var(--secundary-color);
+    margin-bottom: 2.4rem;
+
+}
+p{
+    font-size: 1.8em;
+    line-height: 150%;
+    font-weight: 400;
+    color: var(--paragraph);
+
+    margin-bottom: 3.2rem;
+
+}
+button{
+    background: var(--primary-color);
+    border: none;
+    border-radius: 4rem;
+
+    margin-bottom: 6rem;
+
+    height: 6.2rem;
+    width: 26.3rem;
+
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 700;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.6rem;
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+img{
+    display: block; 
 }
