--- a/style.css
+++ b/style.css
@@ -3,16 +3,19 @@
     box-sizing: border-box;
 }
 :root{
-    --primary-color: hsla(170, 100%, 26%, 1.0);
+    --primary-color: hsl(170, 100%, 26%);
     --headline: hsl(210,11%,15%);
     --paragraph: hsl(210, 9%,31%);
+
+    --brand-beige: hsl(39,100%, 97%);
+    --brand-light: hsl(148, 23%, 89%);
     font-size: 62.5%;
     /* o tamanho de fonte padrão é 16px que é igual a 1 rem, aqui fiz a alteração na root */
 }
 body{
     font-family: 'DM Sans', sans-serif;
     font-size: 1.6rem;
-    color: var(--primary-color);
+
     text-align: center;
 }
 header{
@@ -51,6 +54,7 @@ button{
     background: var(--primary-color);
     border: none;
     border-radius: 4rem;
+    display: block; 
 
     margin-bottom: 6rem;
 
@@ -70,8 +74,59 @@ button{
     margin-left: auto;
     margin-right: auto;
 }
+.stats{
+    width: 32.7rem;
+    
+    padding-block: 4rem;
+
+    margin-inline: auto;
+
+    background-color: var(--brand-beige);
+    border: 1px solid var(--brand-light);
+    border-radius: 0.6px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 6rem;
+
+ 
+}
+
+.stat h3{ 
+    font-size: 4.8rem;
+    color: var(--headline);
+    line-height: 130%;
+
+    margin-bottom: 0.4rem;
+}
+
+.stat p {
+    margin: 0;
+
+    color: var(--primary-color);
+    font-size:  1.6rem;
+    line-height: 150%;
+}
+
+header img{
+    width: 26.4rem;
+    display: block;
+    margin-inline: auto;
+    object-position: 0 20px;
+}
+
+header::before{
+    content:"";
+    width: 100vh;
+    height: 108rem;
+    background-color: var(--brand-light);
+    display: block;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 
 
-img{
-    display: block; 
 }
