--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* GERAL====================*/
 *{
     margin: 0;
     box-sizing: border-box;
@@ -9,39 +10,60 @@
 
     --brand-beige: hsl(39,100%, 97%);
     --brand-light: hsl(148, 23%, 89%);
+    --nav-heigh:7.3rem ;
     font-size: 62.5%;
     /* o tamanho de fonte padrão é 16px que é igual a 1 rem, aqui fiz a alteração na root */
 }
+
 body{
     font-family: 'DM Sans', sans-serif;
     font-size: 1.6rem;
 
     text-align: center;
 }
-header{
+.wrapper{
     width: 37.5rem;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 4.1rem; 
+    padding-inline: 2.4rem;
+}
+/* HEADER =====================*/
+header::before{
+    content:"";
+    width: 100vw;
+    height: calc(108rem + var(--nav-heigh));
+    background-color: var(--brand-light);
+    display: block;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+
+}
+header{
+    
+    margin-top: calc (4.1rem + var(--nav-heigh)); 
     
 
     padding-right: 2rem;
     padding-left: 2rem;
 
 }
-h4 {
+header > h4 {
     font-size: 1.4em;
     color: var(--primary-color);
     margin-bottom: 1.6rem;
 
 }
-h1{
+header > h1{
     font-size: 3.4rem;
     color: var(--secundary-color);
     margin-bottom: 2.4rem;
 
 }
-p{
+header > p{
     font-size: 1.8em;
     line-height: 150%;
     font-weight: 400;
@@ -50,7 +72,7 @@ p{
     margin-bottom: 3.2rem;
 
 }
-button{
+header > button{
     background: var(--primary-color);
     border: none;
     border-radius: 4rem;
@@ -74,6 +96,13 @@ button{
     margin-left: auto;
     margin-right: auto;
 }
+header img{
+    width: 26.4rem;
+    display: block;
+    margin-inline: auto;
+    object-position: 0 20px;
+}
+
 .stats{
     width: 32.7rem;
     
@@ -108,25 +137,20 @@ button{
     font-size:  1.6rem;
     line-height: 150%;
 }
+/*NAVIGATION ============ */
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-header img{
-    width: 26.4rem;
-    display: block;
-    margin-inline: auto;
-    object-position: 0 20px;
-}
+    height: var(--nav-heigh);
 
-header::before{
-    content:"";
-    width: 100vh;
-    height: 108rem;
-    background-color: var(--brand-light);
-    display: block;
-
-    position: absolute;
+    padding: 1.6rem 2.4rem;
+    position: fixed;
     top: 0;
-    left: 0;
-    z-index: -1;
-
-
+    left: 50%;
+    transform: translate(-50%, -00%);
+}
+nav.scroll{
+    background: var(--primary-color);
 }
