--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@ header > h4 {
 header > h1{
     font-size: 3.4rem;
     color: var(--secundary-color);
+    line-height: 130%;
+
     margin-bottom: 2.4rem;
 
 }
@@ -151,12 +153,12 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
-/* nav.weapper {
+ /* nav.weapper {
     display: flex;
     text-align: center;
     justify-content: space-between;
 }
 nav.scroll{
-    /* background: var(--primary-color); 
+     background: var(--primary-color); 
     width: 100vw ;
-} 
+} */
