--- a/style.css
+++ b/style.css
@@ -152,6 +152,12 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    padding: 1.6rem 2.4rem;
+    position: fixed; 
+    top: 0 ;
+    left: 50%;
+    transform: translate(-50%);
 }
  /* nav.weapper {
     display: flex;
