--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header > h1{
 
 }
 header > p{
-    font-size: 1.8em;
+    font-size: 1.8rem;
     line-height: 150%;
     font-weight: 400;
     color: var(--paragraph);
@@ -153,6 +153,7 @@ nav{
     align-items: center;
     justify-content: space-between;
 
+    height: var(--nav-heigh);
     padding: 1.6rem 2.4rem;
     position: fixed; 
     top: 0 ;
