--- a/style.css
+++ b/style.css
@@ -150,8 +150,6 @@ header img{
 
 nav{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
 
     height: var(--nav-heigh);
     padding: 1.6rem 2.4rem;
@@ -160,8 +158,13 @@ nav{
     left: 50%;
     transform: translate(-50%);
 }
+
+nav .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 nav.scroll {
     background-color: var(--primary-color);
-    width: 100vw;
 
 }
