--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@
     
     --nav-heigh:7.2rem ;
 }
-
+html, body{
+    width: 100%;
+    height: 100%;
+}
 body{
     font-family: 'DM Sans', sans-serif;
     font-size: 1.6rem;
@@ -42,7 +45,7 @@ header{
 }
 header::before{
     content:"";
-    width: 100vw;
+    width: 100%;
     height: calc(108rem + var(--nav-heigh));
     background-color: var(--brand-light);
     display: block;
