--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@
     
     --nav-heigh:7.2rem ;
 }
-html, body{
+html,
+body{
     width: 100%;
     height: 100%;
 }
@@ -27,11 +28,13 @@ body{
     font-size: 1.6rem;
 
     text-align: center;
+
+    overflow: overlay;
+    /* não funcionou */
 }
 .wrapper{
     width: 37.5rem;
-    margin-right: auto;
-    margin-left: auto;
+    margin-inline: auto;
     padding-inline: 2.4rem;
 }
 ul{
@@ -120,7 +123,6 @@ header img{
     width: 32.7rem;
     
     padding-block: 4rem;
-
     margin-inline: auto;
 
     background-color: var(--brand-beige);
@@ -159,6 +161,7 @@ nav{
     display: flex;
 
     height: var(--nav-heigh);
+
     padding: 1.6rem 2.4rem;
     position: fixed; 
     top: 0 ;
@@ -174,14 +177,23 @@ nav .wrapper {
 nav.scroll {
     background-color: var(--primary-color);
     width: 100vw;
+    position: fixed;
+    top: 0;
 
 }
+nav.scroll svg:nth-child(1) path {
+    fill: white;
+  }
+  
+nav.scroll button path {
+    stroke: white;
+  }
+  
 nav button{
     background: none;
     border: none;
     cursor: pointer;
 }
-
 /*============= menu-expanded ===============*/
 body.menu-expanded{ 
     overflow: hidden;
